--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </div>
         </div>
         <div class="links" id="links">
-          <a href="#">Services</a>
+          <a href="tarjetas.html">Tarjetas</a>
           <a href="#">About</a>
           <a href="#">Contact</a>
           <a href="#">Search</a>
@@ -34,7 +34,7 @@
       <div class="desktop">
         <div class="logo">Logo</div>
         <div class="primary">
-          <a href="#">Services</a>
+          <a href="tarjetas.html">Tarjetas</a>
           <a href="#">About</a>
           <a href="#">Contact</a>
         </div>
