--- a/tarjetas.html
+++ b/tarjetas.html
@@ -15,7 +15,7 @@
     <nav>
       <div class="mobile">
         <div class="header">
-          <div class="logo">Logo</div>
+          <div class="logo"><img src="img/logo.jpg" alt="" /></div>
           <div class="more">
             <button id="bMore">
               <span class="material-icons"> menu </span>
@@ -32,7 +32,7 @@
         </div>
       </div>
       <div class="desktop">
-        <div class="logo">Logo</div>
+        <div class="logo"><img src="img/logo.jpg" alt="" /></div>
         <div class="primary">
           <a href="#">Tarjetas</a>
           <a href="#">About</a>
@@ -64,7 +64,7 @@
           <div class="footer">
             <div class="autor">
               <a href="#">
-                <img src="" alt="" />
+                <img src="img/logo.jpg" alt="" />
                 <span>Carlos Mariscal</span>
               </a>
             </div>
@@ -78,7 +78,7 @@
           <div class="footer">
             <div class="autor">
               <a href="#">
-                <img src="" alt="" />
+                <img src="img/logo.jpg" alt="" />
                 <span>Carlos Mariscal</span>
               </a>
             </div>
@@ -92,7 +92,7 @@
           <div class="footer">
             <div class="autor">
               <a href="#">
-                <img src="" alt="" />
+                <img src="img/logo.jpg" alt="" />
                 <span>Carlos Mariscal</span>
               </a>
             </div>
@@ -106,7 +106,7 @@
           <div class="footer">
             <div class="autor">
               <a href="#">
-                <img src="" alt="" />
+                <img src="img/logo.jpg" alt="" />
                 <span>Carlos Mariscal</span>
               </a>
             </div>
