--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
           </div>
         </div>
         <div class="links" id="links">
+          <a href="index.html">Inicio</a>
           <a href="tarjetas.html">Tarjetas</a>
-          <a href="#">About</a>
+          <a href="tabla.html">Tablas</a>
           <a href="#">Contact</a>
           <a href="#">Search</a>
           <a href="#">Sign up</a>
@@ -34,8 +35,9 @@
       <div class="desktop">
         <div class="logo">Logo</div>
         <div class="primary">
+          <a href="index.html">Inicio</a>
           <a href="tarjetas.html">Tarjetas</a>
-          <a href="#">About</a>
+          <a href="tabla.html">Tablas</a>
           <a href="#">Contact</a>
         </div>
         <div class="secondary full">
