--- a/tabla.html
+++ b/tabla.html
@@ -26,7 +26,7 @@
           <a href="index.html">Inicio</a>
           <a href="tarjetas.html">Tarjetas</a>
           <a href="tabla.html">Table</a>
-          <a href="#">Contact</a>
+          <a href="notificacion.html">Notificacion</a>
           <a href="#">Search</a>
           <a href="#">Sign up</a>
           <a href="#">Login</a>
@@ -38,7 +38,7 @@
           <a href="index.html">Inicio</a>
           <a href="tarjetas.html">Tarjetas</a>
           <a href="tabla.html">Table</a>
-          <a href="#">Contact</a>
+          <a href="notificacion.html">Notificacion</a>
         </div>
         <div class="secondary full">
           <a href="#">Search</a>
