--- a/notificacion.html
+++ b/notificacion.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <title>Menú vertical responsivo</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Notificación</title>
   </head>
   <body>
     <nav>
@@ -55,12 +55,12 @@
         </div>
       </div>
     </nav>
-    <script>
-      const bMore = document.querySelector("#bMore");
-      const links = document.querySelector("#links");
-      bMore.addEventListener("click", (e) => {
-        links.classList.toggle("collapsed");
-      });
-    </script>
+    <main>
+      <div class="notification">
+        <div class="count">16</div>
+        <div class="material-icons notifi">notifications</div>
+      </div>
+    </main>
+    <script></script>
   </body>
 </html>
