--- a/login.html
+++ b/login.html
@@ -58,7 +58,7 @@
     <main class="main">
       <div class="form-container">
         <div class="login-container">
-          <h2>Welcome</h2>
+          <h2><a href="index.html">Welcome</a></h2>
           <p>Selecciona un método de autenticación</p>
           <form action="">
             <p>
