Tablas de precios

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           <a href="tabla.html">Table</a>
           <a href="notificacion.html">Notificacion</a>
           <a href="barraProgreso.html">Barra de Progreso</a>
+          <a href="tablaPrecios.html">Tabla Precios</a>
         </div>
         <div class="secondary full">
           <a href="#">Search</a>
