checkboxes y radio buttons

--- a/index.html
+++ b/index.html
@@ -57,6 +57,27 @@
         </div>
       </div>
     </nav>
+    <main>
+      <section class="check">
+        <label class="checkbox-container"
+          >Soy un checkbox
+          <input type="checkbox" name="" id="" />
+          <span class="checkmark"
+            ><span class="material-icons">check</span></span
+          >
+        </label>
+        <label class="checkbox-container"
+          >Soy un radio button
+          <input type="radio" name="a" id="" />
+          <span class="checkmark radio"><div class="circle"></div></span>
+        </label>
+        <label class="checkbox-container"
+          >Soy un radio button
+          <input type="radio" name="a" id="" />
+          <span class="checkmark radio"><div class="circle"></div></span>
+        </label>
+      </section>
+    </main>
     <script>
       const bMore = document.querySelector("#bMore");
       const links = document.querySelector("#links");
