Barra de búsqueda

--- a/tarjetas.html
+++ b/tarjetas.html
@@ -56,6 +56,14 @@
       </div>
     </nav>
     <main>
+      <section class="search-bar">
+        <input type="text" />
+        <div class="actions">
+          <button><span class="material-icons">mic</span></button>
+          <button><span class="material-icons">document_scanner</span></button>
+          <button><span class="material-icons">search</span></button>
+        </div>
+      </section>
       <div class="cards">
         <!-- CARD -->
         <div class="card">
