--- a/index.html
+++ b/index.html
@@ -77,6 +77,40 @@
           <span class="checkmark radio"><div class="circle"></div></span>
         </label>
       </section>
+      <section class="cards3d">
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img src="img/logo.jpg" alt="" />
+            </div>
+            <div class="flip-card-back">
+              <h3>Karl Dragneel</h3>
+              <p>Desarrollador de softare</p>
+              <p>Me gusta programar</p>
+            </div>
+          </div>
+        </div>
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front"><img src="img/logo.jpg" alt="" /></div>
+            <div class="flip-card-back">
+              <h3>Karl Dragneel</h3>
+              <p>Desarrollador de softare</p>
+              <p>Me gusta programar</p>
+            </div>
+          </div>
+        </div>
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front"><img src="img/logo.jpg" alt="" /></div>
+            <div class="flip-card-back">
+              <h3>Karl Dragneel</h3>
+              <p>Desarrollador de softare</p>
+              <p>Me gusta programar</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script>
       const bMore = document.querySelector("#bMore");
