sistema de comentarios

--- a/notificacion.html
+++ b/notificacion.html
@@ -60,6 +60,330 @@
         <div class="count">16</div>
         <div class="material-icons notifi">notifications</div>
       </div>
+      <hr />
+      <!-- Thread de Comentarios -->
+      <div class="comment-container">
+        <div class="comment">
+          <div class="comment-wrapper">
+            <div class="content">
+              <div class="user-photo">
+                <img src="img/logo.jpg" alt="" />
+              </div>
+              <div class="comment-info">
+                <div class="header">
+                  <span class="username">@karl</span>
+                  <span class="date">6 hrs ago</span>
+                </div>
+                <div class="text">Este es un comentario</div>
+                <div class="actions">
+                  <button>Like</button>
+                  <button>Reply</button>
+                  <button>Share</button>
+                  <button>Follow</button>
+                  <button>Report</button>
+                </div>
+              </div>
+            </div>
+
+            <div class="replies">
+              <div class="comment">
+                <div class="line"></div>
+                <div class="comment-wrapper">
+                  <div class="content">
+                    <div class="user-photo">
+                      <img src="img/logo.jpg" alt="" />
+                    </div>
+                    <div class="comment-info">
+                      <div class="header">
+                        <span class="username">@drag</span>
+                        <span class="date">1 hrs ago</span>
+                      </div>
+                      <div class="text">Este es un comentario</div>
+                      <div class="actions">
+                        <button>Like</button>
+                        <button>Reply</button>
+                        <button>Share</button>
+                        <button>Follow</button>
+                        <button>Report</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="comment">
+                <div class="line"></div>
+                <div class="comment-wrapper">
+                  <div class="content">
+                    <div class="user-photo">
+                      <img src="img/logo.jpg" alt="" />
+                    </div>
+                    <div class="comment-info">
+                      <div class="header">
+                        <span class="username">@alex</span>
+                        <span class="date">1 hrs ago</span>
+                      </div>
+                      <div class="text">Este es un comentario</div>
+                      <div class="actions">
+                        <button>Like</button>
+                        <button>Reply</button>
+                        <button>Share</button>
+                        <button>Follow</button>
+                        <button>Report</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="comment">
+                <div class="line"></div>
+                <div class="comment-wrapper">
+                  <div class="content">
+                    <div class="user-photo">
+                      <img src="img/logo.jpg" alt="" />
+                    </div>
+                    <div class="comment-info">
+                      <div class="header">
+                        <span class="username">@jc</span>
+                        <span class="date">1 hrs ago</span>
+                      </div>
+                      <div class="text">Este es un comentario</div>
+                      <div class="actions">
+                        <button>Like</button>
+                        <button>Reply</button>
+                        <button>Share</button>
+                        <button>Follow</button>
+                        <button>Report</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="comment">
+          <div class="comment-wrapper">
+            <div class="content">
+              <div class="user-photo">
+                <img src="img/logo.jpg" alt="" />
+              </div>
+              <div class="comment-info">
+                <div class="header">
+                  <span class="username">@karl</span>
+                  <span class="date">6 hrs ago</span>
+                </div>
+                <div class="text">Este es un comentario</div>
+                <div class="actions">
+                  <button>Like</button>
+                  <button>Reply</button>
+                  <button>Share</button>
+                  <button>Follow</button>
+                  <button>Report</button>
+                </div>
+              </div>
+            </div>
+
+            <div class="replies">
+              <div class="comment">
+                <div class="line"></div>
+                <div class="comment-wrapper">
+                  <div class="content">
+                    <div class="user-photo">
+                      <img src="img/logo.jpg" alt="" />
+                    </div>
+                    <div class="comment-info">
+                      <div class="header">
+                        <span class="username">@drag</span>
+                        <span class="date">1 hrs ago</span>
+                      </div>
+                      <div class="text">Este es un comentario</div>
+                      <div class="actions">
+                        <button>Like</button>
+                        <button>Reply</button>
+                        <button>Share</button>
+                        <button>Follow</button>
+                        <button>Report</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="comment">
+          <div class="comment-wrapper">
+            <div class="content">
+              <div class="user-photo">
+                <img src="img/logo.jpg" alt="" />
+              </div>
+              <div class="comment-info">
+                <div class="header">
+                  <span class="username">@karl</span>
+                  <span class="date">6 hrs ago</span>
+                </div>
+                <div class="text">Este es un comentario</div>
+                <div class="actions">
+                  <button>Like</button>
+                  <button>Reply</button>
+                  <button>Share</button>
+                  <button>Follow</button>
+                  <button>Report</button>
+                </div>
+              </div>
+            </div>
+
+            <div class="replies">
+              <div class="comment">
+                <div class="line"></div>
+                <div class="comment-wrapper">
+                  <div class="content">
+                    <div class="user-photo">
+                      <img src="img/logo.jpg" alt="" />
+                    </div>
+                    <div class="comment-info">
+                      <div class="header">
+                        <span class="username">@drag</span>
+                        <span class="date">1 hrs ago</span>
+                      </div>
+                      <div class="text">Este es un comentario</div>
+                      <div class="actions">
+                        <button>Like</button>
+                        <button>Reply</button>
+                        <button>Share</button>
+                        <button>Follow</button>
+                        <button>Report</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="comment">
+                <div class="line"></div>
+                <div class="comment-wrapper">
+                  <div class="content">
+                    <div class="user-photo">
+                      <img src="img/logo.jpg" alt="" />
+                    </div>
+                    <div class="comment-info">
+                      <div class="header">
+                        <span class="username">@alex</span>
+                        <span class="date">1 hrs ago</span>
+                      </div>
+                      <div class="text">Este es un comentario</div>
+                      <div class="actions">
+                        <button>Like</button>
+                        <button>Reply</button>
+                        <button>Share</button>
+                        <button>Follow</button>
+                        <button>Report</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="comment">
+                <div class="line"></div>
+                <div class="comment-wrapper">
+                  <div class="content">
+                    <div class="user-photo">
+                      <img src="img/logo.jpg" alt="" />
+                    </div>
+                    <div class="comment-info">
+                      <div class="header">
+                        <span class="username">@jc</span>
+                        <span class="date">1 hrs ago</span>
+                      </div>
+                      <div class="text">Este es un comentario</div>
+                      <div class="actions">
+                        <button>Like</button>
+                        <button>Reply</button>
+                        <button>Share</button>
+                        <button>Follow</button>
+                        <button>Report</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="comment">
+          <div class="comment-wrapper">
+            <div class="content">
+              <div class="user-photo">
+                <img src="img/logo.jpg" alt="" />
+              </div>
+              <div class="comment-info">
+                <div class="header">
+                  <span class="username">@karl</span>
+                  <span class="date">6 hrs ago</span>
+                </div>
+                <div class="text">Este es un comentario</div>
+                <div class="actions">
+                  <button>Like</button>
+                  <button>Reply</button>
+                  <button>Share</button>
+                  <button>Follow</button>
+                  <button>Report</button>
+                </div>
+              </div>
+            </div>
+
+            <div class="replies">
+              <div class="comment">
+                <div class="line"></div>
+                <div class="comment-wrapper">
+                  <div class="content">
+                    <div class="user-photo">
+                      <img src="img/logo.jpg" alt="" />
+                    </div>
+                    <div class="comment-info">
+                      <div class="header">
+                        <span class="username">@drag</span>
+                        <span class="date">1 hrs ago</span>
+                      </div>
+                      <div class="text">Este es un comentario</div>
+                      <div class="actions">
+                        <button>Like</button>
+                        <button>Reply</button>
+                        <button>Share</button>
+                        <button>Follow</button>
+                        <button>Report</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="comment">
+                <div class="line"></div>
+                <div class="comment-wrapper">
+                  <div class="content">
+                    <div class="user-photo">
+                      <img src="img/logo.jpg" alt="" />
+                    </div>
+                    <div class="comment-info">
+                      <div class="header">
+                        <span class="username">@jc</span>
+                        <span class="date">1 hrs ago</span>
+                      </div>
+                      <div class="text">Este es un comentario</div>
+                      <div class="actions">
+                        <button>Like</button>
+                        <button>Reply</button>
+                        <button>Share</button>
+                        <button>Follow</button>
+                        <button>Report</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <script></script>
   </body>
