Stack de personas

--- a/index.html
+++ b/index.html
@@ -111,6 +111,34 @@
           </div>
         </div>
       </section>
+      <section>
+        <div class="personas-container">
+          <div class="persona">
+            <img src="img/logo.jpg" alt="" />
+            <span class="name"><span class="text">Carlos Mariscal</span></span>
+          </div>
+          <div class="persona">
+            <img src="img/logo.jpg" alt="" />
+            <span class="name"><span class="text">Carlos</span></span>
+          </div>
+          <div class="persona">
+            <img src="img/logo.jpg" alt="" />
+            <span class="name"><span class="text">Mariscal</span></span>
+          </div>
+          <div class="persona">
+            <img src="img/logo.jpg" alt="" />
+            <span class="name"><span class="text">JC</span></span>
+          </div>
+          <div class="persona">
+            <img src="img/logo.jpg" alt="" />
+            <span class="name"><span class="text">Rota</span></span>
+          </div>
+          <div class="persona">
+            <img src="img/logo.jpg" alt="" />
+            <span class="name"><span class="text">Tal</span></span>
+          </div>
+        </div>
+      </section>
     </main>
     <script>
       const bMore = document.querySelector("#bMore");
