--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
           <a href="notificacion.html">Notificacion</a>
           <a href="barraProgreso.html">Barra de Progreso</a>
           <a href="tablaPrecios.html">Tabla Precios</a>
+          <a href="menuVertical.html">Menú vertical</a>
         </div>
         <div class="secondary full">
-          <a href="#">Search</a>
-          <a href="#">Sign up</a>
+          <!-- <a href="#">Search</a> -->
+          <!-- <a href="#">Sign up</a> -->
           <a href="login.html">Login</a>
         </div>
         <div class="secondary mini">
