--- a/index.html
+++ b/index.html
@@ -140,6 +140,120 @@
           </div>
         </div>
       </section>
+      <section class="chat-container">
+        <div class="bubble-container right">
+          <div class="bubble">
+            <div class="bubble-text">
+              <div>
+                <span
+                  >Hola soy una burbuja, este es un primer mensaje de
+                  texto.</span
+                >
+                <div class="bubble-info">3 min ago</div>
+              </div>
+            </div>
+          </div>
+          <div class="bubble">
+            <div class="bubble-text">
+              <div>
+                <span>Hola</span>
+                <div class="bubble-info">3 min ago</div>
+              </div>
+            </div>
+          </div>
+          <div class="bubble">
+            <div class="bubble-text">
+              <div>
+                <span>Hola soy una burbuja</span>
+                <div class="bubble-info">3 min ago</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- LEFT -->
+        <div class="bubble-container left">
+          <div class="bubble">
+            <div class="bubble-text">
+              <div>
+                <span>Hola soy una burbuja</span>
+                <div class="bubble-info">3 min ago</div>
+              </div>
+            </div>
+          </div>
+          <div class="bubble">
+            <div class="bubble-text">
+              <div>
+                <span>Hola</span>
+                <div class="bubble-info">3 min ago</div>
+              </div>
+            </div>
+          </div>
+          <div class="bubble">
+            <div class="bubble-text">
+              <div>
+                <span>Hola soy una burbuja</span>
+                <div class="bubble-info">3 min ago</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="bubble-container right">
+          <div class="bubble">
+            <div class="bubble-text">
+              <div>
+                <span
+                  >Hola soy una burbuja, este es un primer mensaje de
+                  texto.</span
+                >
+                <div class="bubble-info">3 min ago</div>
+              </div>
+            </div>
+          </div>
+          <div class="bubble">
+            <div class="bubble-text">
+              <div>
+                <span>Hola</span>
+                <div class="bubble-info">3 min ago</div>
+              </div>
+            </div>
+          </div>
+          <div class="bubble">
+            <div class="bubble-text">
+              <div>
+                <span>Hola soy una burbuja</span>
+                <div class="bubble-info">3 min ago</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- LEFT -->
+        <div class="bubble-container left">
+          <div class="bubble">
+            <div class="bubble-text">
+              <div>
+                <span>Hola soy una burbuja</span>
+                <div class="bubble-info">3 min ago</div>
+              </div>
+            </div>
+          </div>
+          <div class="bubble">
+            <div class="bubble-text">
+              <div>
+                <span>Hola</span>
+                <div class="bubble-info">3 min ago</div>
+              </div>
+            </div>
+          </div>
+          <div class="bubble">
+            <div class="bubble-text">
+              <div>
+                <span>Hola soy una burbuja</span>
+                <div class="bubble-info">3 min ago</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script>
       const bMore = document.querySelector("#bMore");
