--- a/perfilInstagram.html
+++ b/perfilInstagram.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/perfilInstagram.css" />
-    <title>Perfiles Estilo Instagrar</title>
+    <title>Perfiles Estilo Instagram</title>
   </head>
   <body>
     <div class="stories-container">
